--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+annotated-types==0.7.0
 asgiref==3.5.0
 Django==4.0.3
-djangorestframework==3.13.1
+django-ninja==1.2.2
+pydantic==2.8.2
+pydantic_core==2.20.1
 python-dotenv==0.19.2
 pytz==2022.1
 sqlparse==0.4.2
+typing_extensions==4.12.2
